# rtc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: main_ci.yml  unixlike-builds_ci.yml
include/rtc/: chrono.h  console.h  console_read.h  filesystem.h  pretty_print.h  print.h  random.h  stream.h  string.h  timer.h  typeinfo.h
test/: CMakeLists.txt  chrono.cpp  console.cpp  console_read.cpp  filesystem.cpp  pretty_print.cpp  print.cpp  random.cpp  stream.cpp  string.cpp  timer.cpp  typeinfo.cpp
